Stat block spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
    GLOBAL STYLES
    ========================= */
 body {
-  font-family: Georgia, serif;
+  font-family: 'Bookmania', Georgia, serif;
   background-image: url("https://i.imgur.com/8XflKRc.png");
   background-attachment: fixed;
   background-size: cover;
@@ -109,7 +109,6 @@ h3 {
 
 h4 {
   font-family: 'Bookmania', Georgia, serif;
-  font-weight: 400;
   color: #492468;
   margin-top: 0.5em;
   margin-bottom: 0.2em;
@@ -128,7 +127,7 @@ h4 {
    ========================= */
 .property-line {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   margin: 0.25rem 0;
 }
 .property-line h4 {
